chore: release json-analyzer 0.0.4

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "to-json-schema": "0.2.5"
   },
   "devDependencies": {
+    "@nx/devkit": "17.2.8",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/js": "17.2.8",
