--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@swc/helpers": "~0.5.2",
     "benchmark": "2.1.4",
     "chalk": "^4.1.2",
+    "commander": "^11.1.0",
     "fast-json-stable-stringify": "2.1.0",
     "fast-json-stringify": "5.10.0",
+    "protobufjs": "^7.2.6",
     "to-json-schema": "0.2.5"
   },
   "devDependencies": {
