--- a/packages/json-analyzer/package.json
+++ b/packages/json-analyzer/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@niha-js/json-analyzer",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "dependencies": {
     "@swc/helpers": "~0.5.2",
     "benchmark": "2.1.4",
     "chalk": "^4.1.2",
+    "commander": "^11.1.0",
     "fast-json-stable-stringify": "2.1.0",
     "fast-json-stringify": "5.10.0",
+    "protobufjs": "^7.2.6",
     "to-json-schema": "0.2.5"
   },
   "type": "module",
