--- a/package.json
+++ b/package.json
@@ -4,15 +4,28 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "type": "module",
   "dependencies": {
     "@swc/helpers": "~0.5.2",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "benchmark": "2.1.4",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
+    "dompurify": "^3.1.5",
     "fast-json-stable-stringify": "2.1.0",
     "fast-json-stringify": "5.10.0",
+    "jsdom": "^24.1.0",
+    "marked": "^12.0.2",
     "protobufjs": "^7.2.6",
-    "to-json-schema": "0.2.5"
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "to-json-schema": "0.2.5",
+    "unified": "^11.0.4",
+    "vfile-reporter": "^8.1.1"
   },
   "devDependencies": {
     "@nx/devkit": "17.2.8",
