fix: make the @niha-js/markdown-to-html-analyser executable

--- a/packages/json-analyzer/tsconfig.json
+++ b/packages/json-analyzer/tsconfig.json
@@ -10,7 +10,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "NodeNext"
   },
   "files": [],
   "include": [],
